add hero section

--- a/index.html
+++ b/index.html
@@ -3,11 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Assignment</title>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    
+    <!-- Header section -->
+     <header>
+        <nav>
+            <div class="logo-nav">
+                <img src="Assets/LOGO.png" alt="Website logo">
+            </div>
+            <button class="btn-primary">Sign Up</button>
+        </nav>
+         <!-- hero section -->
+        <section class="hero">
+            <h1>
+                Cool Dark UI Template for <br> Webflow Agencies!
+            </h1>
+            <button class="btn-primary">Stay Focused</button>
+            <div>
+                -
+            </div>
+        </section>
+     </header>
+
+
 </body>
 </html>
