--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Assignment</title>
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="Assets/wc-mini.png" type="image/x-icon">
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
@@ -27,7 +27,17 @@
             </div>
         </section>
      </header>
-
+     <!-- Live Preview section -->
+    <section class="live-preview">
+        <div class="launch-live">
+            <h2>See It in Action</h2>
+            <p>Explore the live preview and imagine your <br> brand in this bold new look.</p>
+            <button class="btn-primary">Launch Live Preview</button>
+        </div>
+        <div class="live-image">
+            <img src="Assets/wc-mini.png" alt="live preview image ">
+        </div>
+    </section>
 
 </body>
 </html>
