add joined productive users section

--- a/index.html
+++ b/index.html
@@ -1,43 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Assignment</title>
-    <link rel="shortcut icon" href="Assets/wc-mini.png" type="image/x-icon">
-    <link rel="stylesheet" href="style/style.css">
-</head>
-<body>
-    <!-- Header section -->
-     <header>
-        <nav>
-            <div class="logo-nav">
-                <img src="Assets/LOGO.png" alt="Website logo">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Assignment</title>
+        <link rel="shortcut icon" href="Assets/wc-mini.png" type="image/x-icon">
+        <link rel="stylesheet" href="style/style.css">
+    </head>
+    <body>
+        <!-- Header section -->
+        <header>
+            <nav>
+                <div class="logo-nav">
+                    <img src="Assets/LOGO.png" alt="Website logo">
+                </div>
+                <button class="btn-primary">Sign Up</button>
+            </nav>
+            <!-- hero section -->
+            <section class="hero">
+                <h1> Cool Dark UI Template for <br> Webflow Agencies! </h1>
+                <button class="btn-primary">Stay Focused</button>
+                <div> - </div>
+            </section>
+        </header>
+        <!-- Live Preview section -->
+        <section class="live-preview">
+            <div class="launch-live">
+                <h2>See It in Action</h2>
+                <p>Explore the live preview and imagine your <br> brand in this bold new look.</p>
+                <button class="btn-primary">Launch Live Preview</button>
             </div>
-            <button class="btn-primary">Sign Up</button>
-        </nav>
-         <!-- hero section -->
-        <section class="hero">
-            <h1>
-                Cool Dark UI Template for <br> Webflow Agencies!
-            </h1>
-            <button class="btn-primary">Stay Focused</button>
-            <div>
-                -
+            <div class="live-image">
+                <img src="Assets/wc-mini.png" alt="live preview image ">
             </div>
         </section>
-     </header>
-     <!-- Live Preview section -->
-    <section class="live-preview">
-        <div class="launch-live">
-            <h2>See It in Action</h2>
-            <p>Explore the live preview and imagine your <br> brand in this bold new look.</p>
-            <button class="btn-primary">Launch Live Preview</button>
-        </div>
-        <div class="live-image">
-            <img src="Assets/wc-mini.png" alt="live preview image ">
-        </div>
-    </section>
-
-</body>
+        <!-- out users section -->
+        <section class="stats-section">
+            <h2>Joined Thousands of Productive Users</h2>
+            <div class="stats-container">
+                <div class="stat-box">
+                    <h3>50K</h3>
+                    <p>Active Users</p>
+                </div>
+                <div class="stat-box">
+                    <h3>2M+</h3>
+                    <p>Focus Sessions</p>
+                </div>
+                <div class="stat-box">
+                    <h3>95%</h3>
+                    <p>Satisfaction Rate</p>
+                </div>
+            </div>
+        </section>
+    </body>
 </html>
