add user's feedback section

--- a/index.html
+++ b/index.html
@@ -52,5 +52,47 @@
                 </div>
             </div>
         </section>
+        <!-- users feedback section -->
+        <section class="feedback">
+            <h2>What our users say</h2>
+            <div class="user-feed">
+                <div class="user">
+                    <img src="Assets/rating.png" alt="Star rating">
+                    <h3>Loved by Designers</h3>
+                    <p>This template instantly leveled up our presence. "-Studio Vertex</p>
+                    <div class="user-profile">
+                        <img src="Assets/avatar.png" alt="User's profile picture">
+                        <div>
+                            <h3>Reviewer name</h3>
+                            <p>Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="user">
+                    <img src="Assets/rating.png" alt="Star rating">
+                    <h3>Loved by Designers</h3>
+                    <p>This template instantly leveled up our presence. "-Studio Vertex</p>
+                    <div class="user-profile">
+                        <img src="Assets/avatar.png" alt="User's profile picture">
+                        <div>
+                            <h3>Reviewer name</h3>
+                            <p>Date</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="user">
+                    <img src="Assets/rating.png" alt="Star rating">
+                    <h3>Loved by Designers</h3>
+                    <p>This template instantly leveled up our presence. "-Studio Vertex</p>
+                    <div class="user-profile">
+                        <img src="Assets/avatar.png" alt="User's profile picture">
+                        <div>
+                            <h3>Reviewer name</h3>
+                            <p>Date</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </body>
 </html>
