add ready to focus better section

--- a/index.html
+++ b/index.html
@@ -94,5 +94,16 @@
                 </div>
             </div>
         </section>
+        <!-- Get Started section -->
+        <section class="get-started">
+            <h1>Ready to focus better</h1>
+            <p>This template instantly leveled up our presence.” – Studio Vertex</p>
+
+            <button class="btn-primary">Get Started Free</button>
+            <div class="get-img-st">
+                <img src="Assets/wc-big.png" alt="poster">
+            </div>
+        </section>
+
     </body>
 </html>
