add input ariya html css

--- a/index.html
+++ b/index.html
@@ -98,12 +98,27 @@
         <section class="get-started">
             <h1>Ready to focus better</h1>
             <p>This template instantly leveled up our presence.” – Studio Vertex</p>
-
             <button class="btn-primary">Get Started Free</button>
             <div class="get-img-st">
                 <img src="Assets/wc-big.png" alt="poster">
             </div>
         </section>
-
+        <!-- input section -->
+        <section class="input">
+            <div class="text-area">
+                <h1>Let's get in <br>Touch</h1>
+            </div>
+            <div class="input-area">
+                <form action="#">
+                    <label for="email">Email</label>
+                    <input type="email" id="email" name="email" placeholder="example@email.com" required>
+                    <label for="name">Name</label>
+                    <input type="text" id="name" name="name" placeholder="Full Name" required>
+                    <label for="message">Message</label>
+                    <textarea id="message" name="message" placeholder="Your Message" required></textarea>
+                    <input class="btn-primary" type="submit" value="Get in Touch">
+                </form>
+            </div>
+        </section>
     </body>
 </html>
