add footer part

--- a/index.html
+++ b/index.html
@@ -120,5 +120,16 @@
                 </form>
             </div>
         </section>
+        <!-- Start footer part -->
+        <footer>
+            <h1>LOGO</h1>
+            <p>Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</p>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">How it Works</a></li>
+                <li><a href="#">Services</a></li>
+            </ul>
+        </footer>
     </body>
 </html>
