add hover effects

--- a/index.html
+++ b/index.html
@@ -123,7 +123,8 @@
         <!-- Start footer part -->
         <footer>
             <h1>LOGO</h1>
-            <p>Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we can bring your vision to life.</p>
+            <p>Ready to elevate your online presence? Contact us today to discuss <br> your project and discover how we
+                can bring your vision to life.</p>
             <ul>
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
